--- a/micons_landing/src/assets/css/style.scss
+++ b/micons_landing/src/assets/css/style.scss
@@ -11,6 +11,7 @@ body{
 }
 a{
     text-decoration: none;
+    color: #999999;
 }
 p{
     color: #999999;
@@ -46,7 +47,7 @@ p{
     height: 100px;
 }
 .content-wrapper{
-    height: 100vh;
+    height: 100%;
 }
 .sec-space{
     padding-top: 100px;
@@ -62,7 +63,6 @@ p{
 /* Header */
 .header{
     background-color: inherit;
-    // box-shadow: 1px 1px 5px 0px #d8d1d1;
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -158,11 +158,19 @@ p{
         top:0;
     }
 }
+.header.scrolled {
+    position: fixed;
+    background-color: #fff;
+    box-shadow: 1px 1px 5px 0px #d8d1d1;
+    .menu li .link{
+        color: #222222;
+    }
+}
 
 /* Home */
 .home-wrap{
     position: relative;
-    height: 100%;
+    height: 100vh;
     .video-banner{
         position: absolute;
         top: -76px;
@@ -266,6 +274,19 @@ p{
             }
         }
     }
+    .proj-txt{
+        text-align: left;
+        padding-top: 50px;
+        h4{
+            margin-bottom: 35px;
+        }
+        .card {
+            border: 0;
+            box-shadow: 0 2px 20px 2px rgba(0, 0, 0, 0.1);
+            padding: 2rem;
+            border-left: 7px solid #00B7ED;
+        }
+    }
 }
 
 .team-wrap{
@@ -320,6 +341,7 @@ p{
 }
 .service-wrap{
     .make-box {
+        padding-bottom: 100px;
         .make-bg {
           background-image: url(../images/serviceBg.jpg);
           background-size: 100% 100%;
@@ -339,9 +361,6 @@ p{
           }
           .col-md-10.m-auto{
             width: 90%;
-          }
-          .pos-box.aos-init.aos-animate{
-            width: 20%;
           }
           .card-body{
             li{
@@ -368,33 +387,36 @@ p{
           border: 0;
           border-radius: 0;
           img {
-            width: 300px;
+            width: 100%;
             height: 217px;
           }
         }
         .card-grp {
             position: absolute;
-            width: 300px;
             transition: all 0.9s ease-in-out;
             height: 500px;
             background: #fff;
+            width: 100%;
+            left: 0;
+            right: 0;
+            margin: auto;
           &:hover{
             transform: scale(1.1);
             box-shadow: 0 0 8px 7px rgba(0, 0, 0, 0.1);
           }
         }
         .g1 {
-          top: 300px;
+          top: 210px;
           height: 550px;
         }
         .g2 {
-          top: 228px;
+          top: 140px;
         }
         .g3 {
-          top: 162px;
+          top: 70px;
         }
         .g4 {
-          top: 110px;
+          top: 0;
         }
       }
 }
@@ -405,11 +427,112 @@ p{
         margin-bottom: 50px;
     }
 }
+.con-wrap{
+    .con-sec{
+        display: grid;
+        grid-template-columns: 3fr 5fr 3fr 3fr 3fr;
+        text-align: center;
+        justify-content: center;
+        padding-bottom: 40px;
+    }
+    .con-box{
+        text-align: center;
+        padding: 0 21px;
+        img{
+            height: 40px;
+            margin-bottom: 23px;
+        }
+        h4{
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 1;
+            margin-bottom: 10px;
+            color: #222222;
+        }
+        p{
+            text-align: center;
+        }
+    }
+    .foot-sec{
+        border-top: 1px solid #e5e5e5;
+        padding-top: 2rem;
+        span{
+            color: #999999;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 19px;
+            text-transform: capitalize;
+        }
+        .ico-box{
+            display: flex;
+            justify-content: flex-end;
+            img{
+                height: 15px;
+                padding-left: 23px;
+            }
+        }
+    }
+}
+
 
 /* Responsive */
 @media (max-width: 575px) {
     .video-react-video {
       width: 100%;
+    }
+    .home-wrap{
+        height: 100%;
+    }
+    .about-wrap.sec-space.bg-white {
+        padding-top: 50%;
+    }
+    .about-wrap .text-box .lft-box{
+        padding: 0 15px;
+    }
+    .visi-wrap .text-box .rit-box{
+        padding: 20px 15px;
+        padding-bottom: 0;
+    }
+    .icons{
+        margin-bottom: 20px;
+    }
+    .icon-title{
+        margin-bottom: 35px;
+    }
+    .team-wrap .team-box {
+        display: block;
+        width: 100%;
+    }
+    .service-wrap .make-box .card-grp{
+        position: unset;
+        margin-top:40px;
+        height: auto;
+    }
+    .service-wrap .make-box .g1{
+        height: auto;
+    }
+    .service-wrap .make-box .make-bg{
+        height: auto;
+        padding-bottom: 40px;
+    }
+    .proj-wrap .proj-txt .card{
+        margin-bottom: 30px;
+    }
+    .con-wrap .con-sec{
+        display: block;
+    }
+    .con-wrap .con-box{
+        margin-bottom: 30px;
+    }
+    .con-wrap .foot-sec{
+        text-align: center;
+        .row{
+            flex-direction: column-reverse;
+        }
+    }
+    .con-wrap .foot-sec .ico-box{
+        justify-content: center;
+        margin-bottom: 23px;
     }
   }
 @media (min-width: 993px){
@@ -462,9 +585,68 @@ p{
             opacity: 1;
         }
     }
+    .header.scrolled .menu li .link{
+        color: #ffffff;
+    }
 }
 @media screen and (min-width:768px) and (max-width:992px){
     .side-menu:checked ~ nav {
         max-height: 100%;
+    }
+    .home-wrap{
+        height: 100%;
+    }
+    .about-wrap.sec-space.bg-white {
+        padding-top: 50%;
+    }
+    .about-wrap .text-box .lft-box{
+        padding: 0 15px;
+    }
+    .visi-wrap .text-box .rit-box{
+        padding: 20px 15px;
+        padding-bottom: 0;
+    }
+    .icons{
+        margin-bottom: 20px;
+    }
+    .icon-title{
+        margin-bottom: 35px;
+    }
+    .team-wrap .team-box {
+        display: block;
+        width: 100%;
+    }
+    .service-wrap .make-box .card-grp{
+        position: unset;
+        margin-top:40px;
+    }
+    .service-wrap .make-box .make-bg{
+        height: auto;
+        padding-bottom: 40px;
+    }
+    .proj-wrap .proj-txt .card{
+       height: 100%;
+    }
+    .con-wrap .con-sec{
+        display: block;
+    }
+    .con-wrap .con-box{
+        margin-bottom: 30px;
+    }
+    .con-wrap .foot-sec{
+        text-align: center;
+        .row{
+            flex-direction: column-reverse;
+        }
+    }
+    .con-wrap .foot-sec .ico-box{
+        justify-content: center;
+        margin-bottom: 23px;
+    }
+    .header .hamb{
+        display: none;
+    }
+    .header .menu li .link{
+        padding: 14px;
     }
 }
