--- a/micons_landing/src/assets/css/style.scss
+++ b/micons_landing/src/assets/css/style.scss
@@ -37,7 +37,7 @@ p{
     color: #222222;
     font-size: 18px;
     font-weight: 400;
-    line-height: 1;
+    line-height: 1.5;
     margin-bottom: 13px;
     text-transform: capitalize;
 }
@@ -60,10 +60,11 @@ p{
 .bg-white{
     background-color: #fff;
 }
+
 /* Header */
 .header{
     background-color: inherit;
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 1000;
     width: 100%;
@@ -170,19 +171,16 @@ p{
 /* Home */
 .home-wrap{
     position: relative;
-    height: 100vh;
     .video-banner{
-        position: absolute;
-        top: -76px;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
+        .video-react.mi-video{
+            // padding: 0 !important;
+        }
         .video-react-control-bar {
             display: none;
         }
         .video-react-video {
             height: 100%;
+            width: 100%;
             object-fit: cover;
         }
         .video-react .video-react-big-play-button{
@@ -344,7 +342,7 @@ p{
         padding-bottom: 100px;
         .make-bg {
           background-image: url(../images/serviceBg.jpg);
-          background-size: 100% 100%;
+          background-size: cover;
           background-position: 100%;
           background-repeat: no-repeat;
           height: 955px;
@@ -379,6 +377,7 @@ p{
           font-weight: 500;
           color: #222222;
           font-size: 18px;
+          line-height: 1.5;
         }
         .card-body {
           position: relative;
@@ -386,6 +385,7 @@ p{
         .card {
           border: 0;
           border-radius: 0;
+          height: 545px;
           img {
             width: 100%;
             height: 217px;
@@ -394,20 +394,18 @@ p{
         .card-grp {
             position: absolute;
             transition: all 0.9s ease-in-out;
-            height: 500px;
-            background: #fff;
             width: 100%;
             left: 0;
             right: 0;
             margin: auto;
+            padding: 0 10px;
           &:hover{
             transform: scale(1.1);
-            box-shadow: 0 0 8px 7px rgba(0, 0, 0, 0.1);
+            // box-shadow: 0 0 8px 7px rgba(0, 0, 0, 0.1);
           }
         }
         .g1 {
           top: 210px;
-          height: 550px;
         }
         .g2 {
           top: 140px;
@@ -430,17 +428,23 @@ p{
 .con-wrap{
     .con-sec{
         display: grid;
-        grid-template-columns: 3fr 5fr 3fr 3fr 3fr;
+        grid-template-columns: 5fr 5fr 3fr;
         text-align: center;
         justify-content: center;
         padding-bottom: 40px;
     }
     .con-box{
-        text-align: center;
+        text-align: left;
         padding: 0 21px;
+        &.pl28{
+            padding-left: 28%;
+        }
+        &.pl35{
+            padding-left: 35%;
+        }
         img{
-            height: 40px;
-            margin-bottom: 23px;
+            height: 63px;
+            margin-bottom: 25px;
         }
         h4{
             font-size: 18px;
@@ -450,7 +454,7 @@ p{
             color: #222222;
         }
         p{
-            text-align: center;
+            text-align: left;
         }
     }
     .foot-sec{
@@ -467,7 +471,7 @@ p{
             display: flex;
             justify-content: flex-end;
             img{
-                height: 15px;
+                height: 18px;
                 padding-left: 23px;
             }
         }
@@ -482,9 +486,6 @@ p{
     }
     .home-wrap{
         height: 100%;
-    }
-    .about-wrap.sec-space.bg-white {
-        padding-top: 50%;
     }
     .about-wrap .text-box .lft-box{
         padding: 0 15px;
@@ -520,6 +521,14 @@ p{
     }
     .con-wrap .con-sec{
         display: block;
+    }
+    .con-wrap .con-box,
+    .con-wrap .con-box p{
+        text-align: center;
+    }
+    .con-wrap .con-box.pl28,
+    .con-wrap .con-box.pl35{
+        padding-left: 0;
     }
     .con-wrap .con-box{
         margin-bottom: 30px;
@@ -596,14 +605,11 @@ p{
     .home-wrap{
         height: 100%;
     }
-    .about-wrap.sec-space.bg-white {
-        padding-top: 50%;
-    }
     .about-wrap .text-box .lft-box{
         padding: 0 15px;
     }
     .visi-wrap .text-box .rit-box{
-        padding: 20px 15px;
+        padding: 0 15px;
         padding-bottom: 0;
     }
     .icons{
@@ -628,20 +634,10 @@ p{
        height: 100%;
     }
     .con-wrap .con-sec{
-        display: block;
+        grid-template-columns: 7fr 4fr 4fr;
     }
     .con-wrap .con-box{
         margin-bottom: 30px;
-    }
-    .con-wrap .foot-sec{
-        text-align: center;
-        .row{
-            flex-direction: column-reverse;
-        }
-    }
-    .con-wrap .foot-sec .ico-box{
-        justify-content: center;
-        margin-bottom: 23px;
     }
     .header .hamb{
         display: none;
