--- a/micons_landing/src/assets/css/style.scss
+++ b/micons_landing/src/assets/css/style.scss
@@ -61,6 +61,41 @@ p{
 .bg-white{
     background-color: #fff;
 }
+.app-btn{
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    z-index: 1030;
+    box-shadow: 3px 17px 26px -4px rgba(0, 0, 0, 0.4);
+    transition: all ease-in-out 300ms;
+    border-radius: 50px;
+    background: inherit;
+    img{
+        height: 60px;
+        cursor: pointer;
+    }
+    h3{
+        font-weight: 500;
+        text-align: center;
+        margin-right: 10px;
+        align-self: center;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+        border: 1px solid #222222;
+        background: #fff;
+        color: #222222;
+        padding: 10px;
+        font-size: 15px;
+        border-radius: 3px;
+        text-align: center;
+        position: absolute;
+        top: -55px;
+        right: -37px;
+        box-shadow: 0px 3px 10px 2px rgba(0, 0, 0, 0.2);
+        width: 117px;
+    }
+}
 
 /* Header */
 .header{
@@ -187,6 +222,19 @@ p{
         .video-react .video-react-big-play-button{
             display: none;
             opacity: 0;
+        }
+        .text-box{
+            position: absolute;
+            top: 50%;
+            bottom: 50%;
+            left: 0;
+            right: 0;
+            margin: auto;
+            text-align: center;
+            h1, p{
+                text-align: center;
+                color: #ffffff;
+            }
         }
     }    
 }
